--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,16 @@
+{% extends 'blog/base.html' %}
+{% load staticfiles %}
+
 <html>
     <head>
         <title>Trần Long Châu's blog</title>
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <div class="page-header">
+            <h1><a href="/">Trần Long Châu's Blog</a></h1>
+        </div>
     </head>
     <body>
         <p>Hi there!</p>
@@ -8,12 +18,16 @@
         <h1>First blog of Trần Long Ch&acirc;u</h1>
         <h2><span style="color: #ff0000;">Welcome!</span></h2>
         <p><span style="color: #ff6600;">This is the first website attempt of Long Ch&acirc;u!!</span></p>
-        {% for post in posts %}
-            <div>
-                <p>published: {{ post.published_date }}</p>
-                <h1><a href="">{{ post.title }}</a></h1>
-                <p>{{ post.text|linebreaksbr }}</p>
-            </div>
-        {% endfor %}
+        {% block content %}
+            {% for post in posts %}
+                <div class="post">
+                    <div class="date">
+                        {{ post.published_date }}
+                    </div>
+                    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                </div>
+            {% endfor %}
+        {% endblock %}
     </body>
 </html>
